# rcs

./: .gitignore  README.org  alias  bashrc  center.yaml  deploy.sh  envs  functions  functions.py  go.work  go.work.sum  note.md  path.py  profile  readme.md  robbyrussell-modify.zsh-theme  utils  utils.py  vscode_config.json  zprofile  zshenv  zshrc
archive/center-cpp-raw/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
archive/center-cpp-raw/proto/: echo.proto
archive/center-cpp-raw/src/: center.cpp
archive/center-cpp-raw/src/db/: piece_record.cpp  piece_record.h  sqlite_db.cpp  sqlite_db.h
archive/center-cpp-workflow/: .gitignore  CMakeLists.txt  README.md
archive/center-cpp-workflow/libs/: README.md
archive/center-cpp-workflow/src/: center.cpp
archive/center-daemon-rust-axum/: .gitignore  Cargo.toml  config.json.example
archive/center-daemon-rust-axum/src/: daemon.http  deploy.rs  dist.rs  main.rs  process.rs  task.rs
archive/center-nextjs/: .gitignore  package-lock.json  package.json
archive/center-rust-tonic/: .gitignore  Cargo.toml  build.rs
archive/center-rust-tonic/proto/: center.proto
archive/center-rust-tonic/src/: dist.rs  main.rs
archive/center-server-kotlin-ktor/: build.gradle.kts  gradle.properties  settings.gradle.kts
archive/center-server-nodejs-fastify/: .gitignore  README.md  config-example.ts  db.ts  package-lock.json  package.json  run.sh  server.ts  tsconfig.json
archive/center-web-react-old/: .env.example  .gitignore  deploy.sh  package.json
center-api/: .gitignore  Cargo.toml
center-api/src/: code.rs  lib.rs
center-daemon/: go.mod
center-daemon/controller/: route.go
center-nextjs/: .gitignore  compose-dev.yaml  package-lock.json  package.json  tailwind.config.ts
center-nextjs/prisma/: schema.prisma
center-rust-axum/: .gitignore  Cargo.toml  Dockerfile  config.toml.example
center-rust-axum/.cargo/: config.toml
center-rust-axum/center/: Cargo.toml
center-rust-axum/center/src/: dist.rs  lib.rs  main.rs  piece.rs
center-rust-axum/center/src/api/: api.http  daily.rs  mod.rs
center-rust-axum/center/src/api/piece_type/: create.rs  detail.rs  list_all.rs  mod.rs  piece_type.http
center-rust-axum/center/src/db/: base.rs  error.rs  mod.rs  piece.rs  piece_rel.rs  piece_type.rs
center-rust-axum/center/src/service/: daily.rs  error.rs  matter_collection.rs  matter_item.rs  mod.rs  note.rs  piece.rs
center-rust-axum/design/: openapi.yaml  piece.md
center-rust-axum/scripts/: center.sql
center-rust-axum/sqlite/: Cargo.toml
center-rust-axum/sqlite_macros/: Cargo.toml
center-rust-axum/sqlite_macros/src/: lib.rs
center-rust-axum/sqlite_macros/tests/: test.rs  test_old.rs
center-rust-axum/tests/: common.rs  piece_test.rs
center-server-go/: .gitignore  config-example.json  deploy.sh  go.mod  go.sum  main.go  run.sh
center-server-go/config/: config.go
center-server-go/controller/: route.go
center-server-go/enum/: api.go  codes.go  constants.go  object_id.go  types.go
center-server-go/model/: model.go  object.go  object_rel.go  object_type.go
center-server-go/script/: center.sql  center_old.sql
center-server-go/tests/: .gitignore  config-test.json  object_test.go
center-server-python-fastapi/: .gitignore  config.py  daily_tests.py  init.py  server.py  status_code.py  utils.py
center-server-python-fastapi/models/: db_center.py  labels.py  object.py  object_type.py
center-server-python-fastapi/routers/: category.py  daily.py  label.py
center-server-python-fastapi/scripts/: center.sql
center-server-python-fastapi/services/: category.py  daily.py  label.py  matter_collection.py  matter_item.py
center-sync/: Cargo.toml
center-web-next/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
center-web-next/lib/: utils.ts
center-web-next/src/: main.css  main.tsx  utils.ts
freesync/: Cargo.toml
goutils/: go.mod  go.sum
goutils/httpframework/: context.go  router.go  server.go  swagger.go
goutils/zaplog/: gorm.go  zaplog.go
iterm2/: com.googlecode.iterm2.plist
mydesktop/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
mydesktop/doc/: devlog.md  plan.md
mydesktop/src/: App.tsx  Launcher.tsx  main.tsx
mydesktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
nginx/conf/: nginx.conf
(+153 files in other folders)
