[package]
name = "center"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = { version = "*", path = "../sqlite" }
sqlite_macros = { version = "*", path = "../sqlite_macros" }

axum = "*"
axum-macros = "*"
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }

regex = "*"

http = "*"

tower = "*"
tower-http = { version = "*", features = ["full"] }

log = "*"

tracing = "*"
tracing-subscriber = { version = "*", features = ["default", "json"] }
tracing-log = "*"

serde = { version = "*", features = ["default", "derive"] }
serde_json = { version = "*" }
serde_repr = "*"

rand = "*"

clap = { version = "*", features = ["derive"] }
toml = "*"

ring = "*"
data-encoding = "*"

time = { version = "*", features = ["serde-well-known", "macros"] }
chrono = { version = "*", features = ["serde"] }

futures = "*"

anyhow = "*"
thiserror = "*"
